src/objects/DCE_ServiceAmend__c.object
<CustomObject>
    <description>Used within the Dementia Connect Extranet community to represent a new service (to be created within the Dementia Connect Database) or the amendment to an existing Service (to be updated within the Dementia Connect Database</description>
    <fields>
        <fullName>Accessibility__c</fullName>
        <inlineHelpText>Select from the drop down list and record additional information in the ‘Additional Information’ field below.</inlineHelpText>
        <label>Venue Accessibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <inlineHelpText>Add any other specific information on toilets/parking/refreshments/venue accessibility if required.</inlineHelpText>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Advertising_Start_Date__c</fullName>
        <inlineHelpText>Enter date to promote your service on Dementia Connect before the service starts.</inlineHelpText>
        <label>Advertising Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advertising_end_date__c</fullName>
        <inlineHelpText>Enter date to remove your service from Dementia Connect online directory. The service will remain open in the Portal.</inlineHelpText>
        <label>Advertising End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DCEPartner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dementia Connect External Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ServiceChanges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DCLink__c</fullName>
        <description>Provides a link to Dementia Connect and the specific service</description>
        <formula>HYPERLINK(&quot;https://alzheimerssociety.my.salesforce.com/&quot;&amp;ServiceId__c , &quot;Dementia Connect&quot; , &quot;_blank&quot;)</formula>
        <label>Link to Dementia Connect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <inlineHelpText>Which days does your Service open?</inlineHelpText>
        <label>Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_time_Hours__c</fullName>
        <label>End time - Hours</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_time_Minutes__c</fullName>
        <label>End time - Minutes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funder_restriction__c</fullName>
        <inlineHelpText>Enter if the service is restricted to a specific group based on location e.g. Residents of London Borough of Wandsworth only.</inlineHelpText>
        <label>Funder restriction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Further_contact_requirements__c</fullName>
        <inlineHelpText>Select additional information to access the service.</inlineHelpText>
        <label>Further contact requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please contact the service provider for more information.</fullName>
                </value>
                <value>
                    <fullName>Please contact the service provider to book a place.</fullName>
                </value>
                <value>
                    <fullName>Please contact the service provider to be added to the waiting list.</fullName>
                </value>
                <value>
                    <fullName>Please contact the service provider for an appointment.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Getting_There__c</fullName>
        <inlineHelpText>Record any additional information regarding public transport/directions by car or on foot.</inlineHelpText>
        <label>Getting There</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LastReviewed__c</fullName>
        <description>This field contains the date of last reviewed</description>
        <label>Last Reviewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>National_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Service?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opening_Times_Guidebook__c</fullName>
        <inlineHelpText>Record the days and times the service is available in the following format: Monday and Thursday, 2pm -5pm</inlineHelpText>
        <label>Service Opening times</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opening_times_Other__c</fullName>
        <inlineHelpText>If you cannot fit your service&apos;s opening times into the standard format, please write a description here.</inlineHelpText>
        <label>Opening times - Other</label>
        <length>230</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operated_By__c</fullName>
        <description>Contains the Id of the organisation in Dementia Connect that this record will link to.</description>
        <label>Operated By</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <inlineHelpText>Select from the drop down list and record additional information in the ‘Additional Information’ field below.</inlineHelpText>
        <label>Parking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes-on site</fullName>
                </value>
                <value>
                    <fullName>Yes-off site</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PortalServiceNumber__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Portal Service Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_External__c</fullName>
        <inlineHelpText>This should be the name of the person who the public should contact about the service. This information will be kept for internal use only e.g. for signposting purposes.</inlineHelpText>
        <label>Public contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reach__c</fullName>
        <description>Defines the reach of the service</description>
        <inlineHelpText>Please give details of the geographic area(s) covered by this service. Geographic areas include parishes, local authorities, counties, regions, countries, Health Board and Clinical Commissioning Group areas. For example, Local Authority: Dover</inlineHelpText>
        <label>Service Reach</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recurrence__c</fullName>
        <inlineHelpText>Select how often the service is available.</inlineHelpText>
        <label>Recurrence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>weekly</fullName>
                </value>
                <value>
                    <fullName>fortnightly</fullName>
                </value>
                <value>
                    <fullName>monthly</fullName>
                </value>
                <value>
                    <fullName>First (day) of every month</fullName>
                </value>
                <value>
                    <fullName>Second (day) of every month</fullName>
                </value>
                <value>
                    <fullName>Third (day) of every month</fullName>
                </value>
                <value>
                    <fullName>Fourth (day) of every month</fullName>
                </value>
                <value>
                    <fullName>Last (day) of every month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this box if the service can only be accessed via a referral from health and social care professionals. Do not tick it if self-referrals are accepted.</inlineHelpText>
        <label>Referral  only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refreshments__c</fullName>
        <inlineHelpText>Select from the drop down list and record additional information in the ‘Additional Information’ field below.</inlineHelpText>
        <label>Refreshments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_telephone_number__c</fullName>
        <inlineHelpText>Additional telephone number for the service</inlineHelpText>
        <label>Secondary telephone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ServiceId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores the value of the Service ID in the production system.</description>
        <externalId>true</externalId>
        <label>Dementia Connect - Service Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ServiceOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Service Owner - We do not use the actual owner field as that can only be updated by the actual owner or an admin, etc.</description>
        <inlineHelpText>We will contact you to request an update to the information you have submitted and to send you updates about the service from time to time.</inlineHelpText>
        <label>Service Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Criteria__c</fullName>
        <inlineHelpText>e.g. People with dementia only, carers or anyone.</inlineHelpText>
        <label>Who can use this service?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Reference__c</fullName>
        <label>Service Reference</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_time_Hours__c</fullName>
        <label>Start time - Hours</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_time_Minutes__c</fullName>
        <label>Start time - Minutes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Amendment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCE_Amendment_Statuses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Line_1__c</fullName>
        <label>Street Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Line_2__c</fullName>
        <label>Street Line 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Line_3__c</fullName>
        <label>Street Line 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toilet_Facilities__c</fullName>
        <inlineHelpText>Select from the drop down list and record additional information in the ‘Additional Information’ field below.</inlineHelpText>
        <label>Toilet Facilities</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Where_does_this_service_operate__c</fullName>
        <inlineHelpText>Select &apos;Venue-based&apos; if the service is available at the specific location entered in the address field (eg drop in, activity group) and/or &apos;Area-wide&apos; if the service is available within a particular area (eg telephone support, home visits).</inlineHelpText>
        <label>Where does this service operate?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Venue-based</fullName>
                </value>
                <value>
                    <fullName>Area-wide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>service_city__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_closedate__c</fullName>
        <inlineHelpText>Add a close date to mark this service as closed</inlineHelpText>
        <label>Close date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>service_country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_county__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_description__c</fullName>
        <inlineHelpText>Our Dementia Connect team may contact you with guidance if the service description requires more detail (max. 100 words)</inlineHelpText>
        <label>Service Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>service_email__c</fullName>
        <inlineHelpText>This should be the email address that service users can use to contact you about the service.</inlineHelpText>
        <label>Email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>service_postcode__c</fullName>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_status__c</fullName>
        <description>Defines the status of the service in Dementia Connect</description>
        <label>Service Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>service_street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>service_telephone__c</fullName>
        <inlineHelpText>This should be the telephone number that service users can use to contact you about the service.</inlineHelpText>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>service_type__c</fullName>
        <inlineHelpText>Please select one option, most appropriate to the service.</inlineHelpText>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advocacy</fullName>
                </value>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>Carer Support &amp; Groups</fullName>
                </value>
                <value>
                    <fullName>Carer Training</fullName>
                </value>
                <value>
                    <fullName>Counselling</fullName>
                </value>
                <value>
                    <fullName>Day care and support (establishment based)</fullName>
                </value>
                <value>
                    <fullName>Dementia cafe</fullName>
                </value>
                <value>
                    <fullName>Dementia Support &amp; Groups</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Home facilities &amp; services</fullName>
                </value>
                <value>
                    <fullName>Information and Advice (Dementia)</fullName>
                </value>
                <value>
                    <fullName>Information and Advice (Financial &amp; Legal)</fullName>
                </value>
                <value>
                    <fullName>Information programme</fullName>
                </value>
                <value>
                    <fullName>Lifestyle &amp; Wellbeing</fullName>
                </value>
                <value>
                    <fullName>Memory Assessment</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Online forum</fullName>
                </value>
                <value>
                    <fullName>Registered home care and support</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Residential/nursing home care</fullName>
                </value>
                <value>
                    <fullName>Respite</fullName>
                </value>
                <value>
                    <fullName>Social Services</fullName>
                </value>
                <value>
                    <fullName>Telephone helpline</fullName>
                </value>
                <value>
                    <fullName>Transport, Driving &amp; Mobility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>service_website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>DCE Service Creation or Amendment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DCE_Admins_DCE_ServiceAmend</fullName>
        <filterScope>Queue</filterScope>
        <label>Dementia Connect Portal Admins</label>
        <queue>DCE_Admins</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DCE Service Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Complete_opening_times</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISNEW()),
    OR(
       AND(
           ISBLANK(Opening_times_Other__c),
           ISBLANK( Text(Recurrence__c) )
       ),
       AND(
           NOT(ISBLANK(Opening_times_Other__c)),
           NOT(ISBLANK( Text(Recurrence__c) ))
       )
    )
)</errorConditionFormula>
        <errorMessage>Please fill in either of the Opening Times options A or B. You can also include additional information in Option C if you wish.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_Service_is_linked_to_org_with_DCE</fullName>
        <active>true</active>
        <description>This validation rule ensures that services are linked to Organisations which have a DCE ID filled in</description>
        <errorConditionFormula>AND(
    OR(
       ISNEW(),
       ISCHANGED( DCEPartner__c )
    ),
    OR(
       ISBLANK( DCEPartner__c ),
       ISBLANK( DCEPartner__r.DCEProdOrgID__c ),
       NOT(BEGINS(DCEPartner__r.DCEProdOrgID__c, &quot;001&quot;))
    )
)</errorConditionFormula>
        <errorDisplayField>DCEPartner__c</errorDisplayField>
        <errorMessage>Please ensure this service is linked to an organisation record which has been linked to an External Organisation in CRS</errorMessage>
    </validationRules>
</CustomObject>